--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     },
     "homepage": "https://github.com/gaurav-08-patel/mern-auth#readme",
     "dependencies": {
+        "bcrypt": "^6.0.0",
         "dotenv": "^17.2.1",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "mongoose": "^8.18.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
