--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.12",
+    "daisyui": "^5.0.50",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.8.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
